--- a/allmax/package.json
+++ b/allmax/package.json
@@ -10,10 +10,13 @@
     "test:unit": "vitest",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
-    "depoly":"vite build && gh-pages -d dist"
+    "depoly": "vite build && gh-pages -d dist"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.3",
     "pinia": "^2.1.7",
+    "sass": "^1.77.8",
     "vue": "^3.4.29"
   },
   "devDependencies": {
